tests/equality/equality.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot compare number literal `3` [1] to string literal `A` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:7:7
   7|   if (o1 == o2) {
            ^^

References:
   test.js:6:21
   6| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:6:29
   6| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot compare number literal `3` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:7:7
   7|   if (o1 == o2) {
            ^^

References:
   test.js:6:21
   6| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:6:29
   6| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot compare number literal `4` [1] to string literal `A` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:7:7
   7|   if (o1 == o2) {
            ^^

References:
   test.js:6:21
   6| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:6:29
   6| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot compare number literal `4` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:7:7
   7|   if (o1 == o2) {
            ^^

References:
   test.js:6:21
   6| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:6:29
   6| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot compare number literal `1` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:16:7
   16|   if (o1 == o2) {
             ^^

References:
   test.js:15:21
   15| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:15:29
   15| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot compare number literal `1` [1] to string literal `C` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:16:7
   16|   if (o1 == o2) {
             ^^

References:
   test.js:15:21
   15| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:15:29
   15| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot compare number literal `2` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:16:7
   16|   if (o1 == o2) {
             ^^

References:
   test.js:15:21
   15| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:15:29
   15| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot compare number literal `2` [1] to string literal `C` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:16:7
   16|   if (o1 == o2) {
             ^^

References:
   test.js:15:21
   15| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:15:29
   15| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot compare string literal `A` [1] to number literal `3` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:16:7
   16|   if (o1 == o2) {
             ^^

References:
   test.js:15:21
   15| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:15:29
   15| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]



Found 9 errors
